objects/advpm__Matter__c.object
<CustomObject>
    <customHelpPage>advpm__HelpMatter</customHelpPage>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                    <default>true</default>
                    <label>Approved</label>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Approved #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Matters_Deals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attainable_litigation_objective__c</fullName>
        <label>Attainable litigation objective</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Availability_End_Date__c</fullName>
        <description>Calculates the End Date of a Deal</description>
        <formula>IF(ISPICKVAL(Availability__c,&apos;&apos;),DATE(0001, 1, 1), IF(
ISPICKVAL(Availability__c,&apos;Day(s)&apos;),Start_Date__c + Availability_Period__c, IF( ISPICKVAL(Availability__c,&apos;Month(s)&apos;),

DATE(
YEAR(Start_Date__c) + FLOOR( ( MONTH (Start_Date__c) + Availability_Period__c - 1 ) / 12 ),
MOD( MONTH (Start_Date__c) + Availability_Period__c - 1 + 
IF( DAY (Start_Date__c) &gt; CASE( MOD( MONTH(Start_Date__c) + Availability_Period__c - 1, 12 ) + 1, 
2, 28,
4, 30,
6, 30,
9, 30, 
11, 30,
31 ), 1, 0 ), 12 ) + 1,
IF( DAY(Start_Date__c) &gt; CASE( MOD( MONTH(Start_Date__c ) + Availability_Period__c - 1, 12 ) + 1,
2, 28, 
4, 30, 
6, 30, 
9, 30, 
11, 30, 
31 ), 
1, DAY(Start_Date__c)
)
)






, DATE(YEAR(Start_Date__c)+Availability_Period__c, MONTH(Start_Date__c), DAY(Start_Date__c))



)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Availability_Period__c</fullName>
        <label>Deal Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Availability__c</fullName>
        <description>Field used to calculate the Period of a Deal</description>
        <label>Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Month(s)</fullName>
                </value>
                <value>
                    <fullName>Year(s)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bank__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Market Transaction</relationshipLabel>
        <relationshipName>Matters_Deals1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Barclays_Entities__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Barclays Entities</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Matters (Barclays Entities)</relationshipLabel>
        <relationshipName>Matters1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Box_Legal_Hold_Assignment_Id__c</fullName>
        <description>To hold legal hold assignment id from Box</description>
        <label>Box Legal Hold Assignment Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit_Cluster_Segment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Unit</label>
        <referenceTo>Business_Unit__c</referenceTo>
        <relationshipLabel>Matters/Deals</relationshipLabel>
        <relationshipName>Matters_Deals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Unit_Contact_Person__c</fullName>
        <inlineHelpText>Person to be contacted from the Business Unit in case of any follow-up/queries</inlineHelpText>
        <label>Business Unit Contact Person</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit_Legal__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Segment__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Business_Unit_Legal</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Unit_Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Legal Internal Business Units</description>
        <label>Business Unit</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Business Units</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Matters/Deals (Business Unit)</relationshipLabel>
        <relationshipName>Matters_Deals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <inlineHelpText>Business Unit where query originates from</inlineHelpText>
        <label>Business Unit</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CD_USB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CD/USB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIF_ID_Account__c</fullName>
        <formula>advpm__Primary_Account__r.CIF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CIF ID (Account)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Matter_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Categories</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Claim_By_Against_Barclays__c</fullName>
        <label>Claim By/Against Barclays</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Claim By Barclays</fullName>
                </value>
                <value>
                    <fullName>Claim Against Barclays</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Branch_code__c</fullName>
        <label>Client/Branch code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cluster__c</fullName>
        <label>Cluster/Function</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Cluster</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Collateral_Agreement_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Collateral Agreement Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Collective_Investment_Scheme_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collective Investment Scheme Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Matters/Deals (Name of Collective Investment Scheme)</relationshipLabel>
        <relationshipName>Matters_Deals3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Collective_Investment_Scheme_Type__c</fullName>
        <label>Collective Investment Scheme Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Relationship_Type_picklist__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>Qualified Investor Hedge Fund</fullName>
                </value>
                <value>
                    <fullName>Retail Hedge Fund</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conditions_Occurrence_Monitoring__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Responsible person for receiving notifications when a Condition becomes due</description>
        <label>Conditions Occurrence Monitoring</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Matters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost_Centre_Name__c</fullName>
        <inlineHelpText>Capturer&apos;s cost centre</inlineHelpText>
        <label>Cost Centre Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Centre__c</fullName>
        <label>Cost Centre</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Costs_Actually_Recovered__c</fullName>
        <label>Costs Actually Recovered</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Costs_Awarded_Against_Barclays__c</fullName>
        <label>Costs Awarded Against Barclays</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_Asset_Manager__c</fullName>
        <label>Count - Asset Manager</label>
        <summaryFilterItems>
            <field>Deal_Party__c.Relationship_Type__c</field>
            <operation>equals</operation>
            <value>Asset Manager</value>
        </summaryFilterItems>
        <summaryForeignKey>Deal_Party__c.Deal__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_Collective_Investment_Scheme_Man__c</fullName>
        <label>Count - Collective Investment Scheme Man</label>
        <summaryFilterItems>
            <field>Deal_Party__c.Relationship_Type__c</field>
            <operation>equals</operation>
            <value>Collective Investment Scheme Manager</value>
        </summaryFilterItems>
        <summaryForeignKey>Deal_Party__c.Deal__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_Counterparty__c</fullName>
        <label>Count - Counterparty</label>
        <summaryFilterItems>
            <field>Deal_Party__c.Relationship_Type__c</field>
            <operation>equals</operation>
            <value>Counterparty</value>
        </summaryFilterItems>
        <summaryForeignKey>Deal_Party__c.Deal__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_Jurisdiction__c</fullName>
        <label>Count - Jurisdiction</label>
        <summaryForeignKey>Jurisdiction__c.Matter__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Counterparty_Type__c</fullName>
        <label>Counterparty Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Relationship_Type_picklist__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Closed Corporation</fullName>
                </value>
                <value>
                    <fullName>Company</fullName>
                </value>
                <value>
                    <fullName>Corporation</fullName>
                </value>
                <value>
                    <fullName>CPF Corporation Template</fullName>
                </value>
                <value>
                    <fullName>En Commandite Partnership</fullName>
                </value>
                <value>
                    <fullName>Long Term Insurer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pension Fund</fullName>
                </value>
                <value>
                    <fullName>Project Finance Linked Hedging</fullName>
                </value>
                <value>
                    <fullName>Short Term Insurer</fullName>
                </value>
                <value>
                    <fullName>Trust</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Coverage_Area__c</fullName>
        <inlineHelpText>Specific sub team you work for within the Division you have  selected</inlineHelpText>
        <label>Coverage Area</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Division__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Corporate Bank - ROA</fullName>
                </value>
                <value>
                    <fullName>Corporate Bank - SA</fullName>
                </value>
                <value>
                    <fullName>Investment Banking - ROA</fullName>
                </value>
                <value>
                    <fullName>Investment Banking - SA</fullName>
                </value>
                <value>
                    <fullName>Head Office - ROA</fullName>
                </value>
                <value>
                    <fullName>Head Office - SA</fullName>
                </value>
                <value>
                    <fullName>Other - ROA</fullName>
                </value>
                <value>
                    <fullName>Other - SA</fullName>
                </value>
                <value>
                    <fullName>Business Markets - SA</fullName>
                </value>
                <value>
                    <fullName>Card - SA</fullName>
                </value>
                <value>
                    <fullName>CPF equities - SA</fullName>
                </value>
                <value>
                    <fullName>RBB - ROA</fullName>
                </value>
                <value>
                    <fullName>Retail Markets - SA</fullName>
                </value>
                <value>
                    <fullName>Insurance - SA</fullName>
                </value>
                <value>
                    <fullName>Wealth and Investment Management - SA</fullName>
                </value>
                <value>
                    <fullName>Wealth, Investment management and Insurance - ROA</fullName>
                </value>
                <value>
                    <fullName>Corporate Banking</fullName>
                </value>
                <value>
                    <fullName>Investment Banking</fullName>
                </value>
                <value>
                    <fullName>Markets</fullName>
                </value>
                <value>
                    <fullName>Business Banking</fullName>
                </value>
                <value>
                    <fullName>Mergers &amp; Acquisitions</fullName>
                </value>
                <value>
                    <fullName>Equity Capital Markets</fullName>
                </value>
                <value>
                    <fullName>Private Equity</fullName>
                </value>
                <value>
                    <fullName>Project Finance</fullName>
                </value>
                <value>
                    <fullName>Leverage Finance</fullName>
                </value>
                <value>
                    <fullName>Global Loans</fullName>
                </value>
                <value>
                    <fullName>Prime Services</fullName>
                </value>
                <value>
                    <fullName>Risk Solutions Group</fullName>
                </value>
                <value>
                    <fullName>Structured Products</fullName>
                </value>
                <value>
                    <fullName>Debt Capital Markets</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Status__c</fullName>
        <label>Current Status</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_account_number_policy_number__c</fullName>
        <label>Customer account number/policy number/</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Closure__c</fullName>
        <label>Date of Closure</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_in_Status__c</fullName>
        <formula>TODAY() -  DATEVALUE(Status_Change_Stamp__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_Description__c</fullName>
        <label>Deal Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_enquiry__c</fullName>
        <inlineHelpText>Detailed description of the query</inlineHelpText>
        <label>Description (enquiry)</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disposition_Description__c</fullName>
        <label>Disposition Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disposition_Type__c</fullName>
        <label>Disposition Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Disposition_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Division_User_Record__c</fullName>
        <formula>TEXT (Owner:User.Division__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <inlineHelpText>Legal area you work in</inlineHelpText>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CIB</fullName>
                </value>
                <value>
                    <fullName>RBB</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Africa Docman</fullName>
                    <isActive>false</isActive>
                    <label>Africa Docman</label>
                </value>
                <value>
                    <fullName>Africa Shared Services</fullName>
                    <isActive>false</isActive>
                    <label>Africa Shared Services</label>
                </value>
                <value>
                    <fullName>Debt</fullName>
                    <isActive>false</isActive>
                    <label>Debt</label>
                </value>
                <value>
                    <fullName>Distribution</fullName>
                    <isActive>false</isActive>
                    <label>Distribution</label>
                </value>
                <value>
                    <fullName>Global Markets</fullName>
                    <isActive>false</isActive>
                    <label>Global Markets</label>
                </value>
                <value>
                    <fullName>HOTH</fullName>
                    <isActive>false</isActive>
                    <label>HOTH</label>
                </value>
                <value>
                    <fullName>Infrastructure</fullName>
                    <isActive>false</isActive>
                    <label>Infrastructure</label>
                </value>
                <value>
                    <fullName>Investment Banking</fullName>
                    <isActive>false</isActive>
                    <label>Investment Banking</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <isActive>false</isActive>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>WIMI</fullName>
                    <isActive>false</isActive>
                    <label>WIMI</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ECA_backed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ECA backed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Early_Settlement__c</fullName>
        <label>Early Settlement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <inlineHelpText>Specify the due date of a matter in order to meet the matter deadlines</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extension__c</fullName>
        <label>Extension Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExternalMatterId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalMatterId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalSpend__c</fullName>
        <inlineHelpText>Total Spend to Date</inlineHelpText>
        <label>External Spend</label>
        <summarizedField>Matter_Spend_Document__c.Grand_Total__c</summarizedField>
        <summaryFilterItems>
            <field>Matter_Spend_Document__c.Status__c</field>
            <operation>equals</operation>
            <value>Paid</value>
        </summaryFilterItems>
        <summaryForeignKey>Matter_Spend_Document__c.Matter__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>External_Collaboration_Id__c</fullName>
        <label>External Collaboration Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Party_Details__c</fullName>
        <label>External Party Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Financial_Value_Unknown__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Financial Value Unknown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flow__c</fullName>
        <label>Flow</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FolderID__c</fullName>
        <label>FolderID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBP_Exchange_Rate__c</fullName>
        <label>GBP Exchange Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Has_Agency_Participant__c</fullName>
        <label>Has Agency Participant</label>
        <summaryFilterItems>
            <field>advpm__Participant__c.Agency_Participant__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>advpm__Participant__c.advpm__Matter__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Imported_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Imported Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <formula>TEXT( advpm__Primary_Account__r.Industry)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Industry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Agency__c</fullName>
        <formula>Has_Agency_Participant__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Agency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jurisdiction__c</fullName>
        <description>The country in which the matter resides</description>
        <inlineHelpText>The country in which the matter resides</inlineHelpText>
        <label>Jurisdiction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Lawyer_Office__c</fullName>
        <description>Location</description>
        <inlineHelpText>Location of Lead Lawyer</inlineHelpText>
        <label>Lead Lawyer Office</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cape Town</fullName>
                </value>
                <value>
                    <fullName>Durban</fullName>
                </value>
                <value>
                    <fullName>Johannesburg</fullName>
                    <default>true</default>
                    <label>Johannesburg</label>
                </value>
                <value>
                    <fullName>Port Elizabeth</fullName>
                </value>
                <value>
                    <fullName>Pretoria</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal_Entity__c</fullName>
        <inlineHelpText>The Legal Entity field identifies the legal entity related to the Dispute Matter.</inlineHelpText>
        <label>Legal Entity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TBC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal_Team_Region__c</fullName>
        <description>The Legal Team Region is a mandatory field that automatically defaults to the Legal Team Region of the user who created a matter</description>
        <formula>Text ($User.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legal Team Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Team__c</fullName>
        <description>The Legal Team Region is a mandatory field that automatically defaults to the Legal Team Region of the user who created a matter</description>
        <label>Legal Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Legal_Team</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Litigation_Status__c</fullName>
        <label>Litigation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Litigation_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_of_Incorporation__c</fullName>
        <label>Location of Incorporation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Copenhagen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Long_Matter_Name__c</fullName>
        <description>The formal court case name can be added within this field. The field contains additional information that helps to identify the matter. This field is not visible to anyone who does not have access to the matter</description>
        <inlineHelpText>The formal court case name can be added within this field. The field contains additional information that helps to identify the matter.</inlineHelpText>
        <label>Long Matter Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Master_Agreement_Type__c</fullName>
        <label>Master Agreement Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GMRA Agreement</fullName>
                </value>
                <value>
                    <fullName>GMSLA Agreement</fullName>
                </value>
                <value>
                    <fullName>ISDA Agreement</fullName>
                </value>
                <value>
                    <fullName>Prime Services Agreement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MatterAgeDays__c</fullName>
        <description>(MS) - W-003844: Start Date should be equal to the Created Date of a Matter.</description>
        <formula>TODAY() - Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Matter Age (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Matter_ID__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <label>Matter ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Matter_Security__c</fullName>
        <description>The Matter Security field defines the initial security of the matter and defaults to ‘Default User Group’. The field is mandatory and is related to the Legal Team Region field as by default matters are accessible by every user within their Legal Team Region. In order to ensure confidentiality, highly sensitive matters can be locked to ‘Assignee Access Only’ within the drop down field</description>
        <label>Matter Security</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Default User Group</fullName>
                    <default>true</default>
                    <label>Default User Group</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Matter_Size__c</fullName>
        <label>Matter Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sub R100 million (Standard)</fullName>
                </value>
                <value>
                    <fullName>Sub R100 million (Combination)</fullName>
                </value>
                <value>
                    <fullName>Sub R100 million (Plus)</fullName>
                </value>
                <value>
                    <fullName>Bespoke</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Matter_Type__c</fullName>
        <label>Matter Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Matter_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Matter_Value__c</fullName>
        <label>Total Claim Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Negative_Outcome_Before_All_Costs__c</fullName>
        <label>Negative Outcome Before All Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Netting_Applicable__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>This indicates whether Netting will apply on the Agreement</inlineHelpText>
        <label>Netting Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Netting_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Netting Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Review_Date__c</fullName>
        <label>Next Review Date</label>
        <type>Date</type>
    </fields>
</CustomObject>